Fix alignment of feedback icons on signup forms

--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -112,7 +112,7 @@ input[type="checkbox"].checkbox-lg {
 
 .has-feedback {
   .input-group .form-control-feedback {
-    top: 12px;
+    top: 16px;
   }
 }
 
